# XiaomiLog2Battery

./: .gitignore  Central.py  Check_packages.py  README.md  Start.bat  XiaomiLogFinder.py  app.py  main_program_cn.py  pyproject.toml  run.py
Dashboard/: __init__.py  app.py  components.py  utils.py
Modules/: ColorManager.py  Compress.py  Compressing.py  FileManager.py  LogManager.py  Record.py  Search.py  Visualization.py  __init__.py
Modules/Core/: ApplicationCore.py  Backend.py  PackageCheckers.py  __init__.py  sha256Validator.py
Modules/DataAnalysis/: BatteryDataService.py  BatteryInfoParser.py  PlotlyVisualizer.py  Record.py  Search.py  Visualization.py  XiaomiBatteryCapacities_Android13Plus.json  XiaomiModelCodeMapping.txt  __init__.py
Modules/Database/: __init__.py  database.py
Modules/FileProcess/: BatteryLogProcessor.py  BatteryLoggingExtractor.py  Compress.py  FolderOperator.py  __init__.py
Modules/LogRecord/: ColorHandler.py  LogSystem.py  LoggerConfig.json  __init__.py
WebPanel/: __init__.py  models.py  routes.py
WebPanel/templates/: basicLayouts.html  home.html
components/: __init__.py  status.py
components/uploader/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
libs/: dash_uploader-0.7.0a2+fix1-py3-none-any.whl  dash_uploader-0.7.0a2+fix2-py3-none-any.whl  dash_uploader-0.7.0a2+fix3-py3-none-any.whl
pages/: graphs.py  home.py  processing.py  reports.py  settings.py  uploads.py
src/: __init__.py  config.py
src/analysis/: __init__.py  data_services.py  parser.py  visualizer.py
src/config/: __init__.py  database.py  version.py
src/persistence/: __init__.py  analysis_results.py  connect.py  storage.py  uploaded_record.py
src/processing/: __init__.py  battery_processor.py
utils/: __init__.py  pipelines.py  ui.py
v2_all_tools/Dashboard/: app.py  components.py
(+11 files in other folders)
