[project]
name = "xiaomilog2battery"
version = "3.0.0-alpha.1"
description = "A program which analyzes battery capacity from logs of Xiaomi smartphones."
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = {name = "Ozx-68102", email = "ozx1072960726@gmail.com"}
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "pandas>=2.3.3",
    "waitress>=3.0.2",
]

[project.urls]
Repository = "https://github.com/Ozx-68102/XiaomiLog2Battery"

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
]
